--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </div>
               <div class="followers-today">
                 <p class="grouth positive-grouth">
-                  <img src="images/icon-up.svg" alt=""><output>12</output><span> Today</span>
+                  <img class="arrow-img" src="images/icon-up.svg" alt=""><output>12</output><span> Today</span>
                 </p>
               </div>
             </div>
@@ -59,7 +59,7 @@
               </div>
               <div class="followers-today">
                 <p class="grouth positive-grouth">
-                  <img src="images/icon-up.svg" alt=""><output>99</output><span> Today</span>
+                  <img class="arrow-img" src="images/icon-up.svg" alt=""><output>99</output><span> Today</span>
                 </p>
               </div>
             </div>
@@ -76,7 +76,7 @@
               </div>
               <div class="followers-today">
                 <p class="grouth positive-grouth">
-                  <img src="images/icon-up.svg" alt=""><output>1099</output><span> Today</span>
+                  <img class="arrow-img" src="images/icon-up.svg" alt=""><output>1099</output><span> Today</span>
                 </p>
               </div>
             </div>
@@ -93,7 +93,7 @@
               </div>
               <div class="followers-today">
                 <p class="grouth negative-grouth"> 
-                  <img src="images/icon-up.svg" alt=""><output>144</output><span> Today</span>
+                  <img class="arrow-img" src="images/icon-up.svg" alt=""><output>144</output><span> Today</span>
                 </p>
               </div>
             </div>
@@ -113,7 +113,7 @@
             </div>
             <div class="overview-item-line">
               <output>87</output>
-              <p class="grouth positive-grouth"><img src="images/icon-up.svg" alt=""><output>3%</output></p>
+              <p class="grouth positive-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>3%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -123,7 +123,7 @@
             </div>
             <div class="overview-item-line">
               <output>52</output>
-              <p class="grouth negative-grouth"><img src="images/icon-up.svg" alt=""><output>2%</output></p>
+              <p class="grouth negative-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>2%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -133,7 +133,7 @@
             </div>
             <div class="overview-item-line">
               <output>5462</output>
-              <p class="grouth positive-grouth"><img src="images/icon-up.svg" alt=""><output>2257%</output></p>
+              <p class="grouth positive-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>2257%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -143,7 +143,7 @@
             </div>
             <div class="overview-item-line">
               <output>52k</output>
-              <p class="grouth positive-grouth"><img src="images/icon-up.svg" alt=""><output>1375%</output></p>
+              <p class="grouth positive-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>1375%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -153,7 +153,7 @@
             </div>
             <div class="overview-item-line">
               <output>117</output>
-              <p class="grouth positive-grouth"><img src="images/icon-up.svg" alt=""><output>303%</output></p>
+              <p class="grouth positive-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>303%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -163,7 +163,7 @@
             </div>
             <div class="overview-item-line">
               <output>507</output>
-              <p class="grouth positive-grouth"><img src="images/icon-up.svg" alt=""><output>553%</output></p>
+              <p class="grouth positive-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>553%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -173,7 +173,7 @@
             </div>
             <div class="overview-item-line">
               <output>107</output>
-              <p class="grouth negative-grouth"><img src="images/icon-up.svg" alt=""><output>19%</output></p>
+              <p class="grouth negative-grouth"><img class="arrow-img" class="arrow-img" src="images/icon-up.svg" alt=""><output>19%</output></p>
             </div>
           </article>
           <article class="overview-item">
@@ -183,7 +183,7 @@
             </div>
             <div class="overview-item-line">
               <output>1407</output>
-              <p class="grouth negative-grouth"><img src="images/icon-up.svg" alt=""><output>12%</output></p>
+              <p class="grouth negative-grouth"><img class="arrow-img" src="images/icon-up.svg" alt=""><output>12%</output></p>
             </div>
           </article>
 
